# cppProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
test/: catch.hpp  catch_main.cpp
